--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="main">
       <h1 class="logo">Snappy</h1>
-        <p>
+        <p class="tagline">
           An instant chat platform.
         </p>
         <button class="signin"> Sign in with Google</button>
