--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body>
+  <body class="indexbody">
+    <div class="parent">
     <div class="main">
       <h1 class="logo">Snappy</h1>
         <p class="tagline">
@@ -18,5 +19,6 @@
         </p>
         <button class="signin"> Sign in with Google</button>
     </div>
+  </div>
   </body>
 </html>
