--- a/chat.html
+++ b/chat.html
@@ -10,9 +10,89 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="members">
+    <div class="member-area">
+      <div class="user-info">
+        Raj Kamdar
+        <span class="logout"> Logout </span>
+      </div>
+      <div class="members">
+        <div class="member">
+            Ramesh
+        </div>
+        <div class="member">
+            Suresh
+        </div>
+        <div class="member">
+            Mahesh
+        </div>
+        <div class="member active">
+            Rajesh
+        </div>
+        <div class="member">
+            Rakesh
+        </div>
+      </div>
     </div>
-    <div class="messages">
+
+    <div class="message-area">
+      <div class="chat-info">
+          Rajesh
+      </div>
+      <div class="messages">
+        <div class="message">
+          Hey Buddy
+        </div>
+        <div class="message sentmsg">
+          How are you?
+        </div>
+        <div class="message">
+          Cool
+        </div>
+        <div class="message sentmsg">
+          Wonderful
+        </div>
+        <div class="message">
+          Yeah
+        </div>
+
+
+        <div class="message">
+          Hey Buddy
+        </div>
+        <div class="message sentmsg">
+          How are you?
+        </div>
+        <div class="message">
+          Cool
+        </div>
+        <div class="message sentmsg">
+          Wonderful
+        </div>
+        <div class="message">
+          Yeah
+        </div>
+
+
+        <div class="message">
+          Hey Buddy
+        </div>
+        <div class="message sentmsg">
+          How are you?
+        </div>
+        <div class="message">
+          Cool
+        </div>
+        <div class="message sentmsg">
+          Wonderful
+        </div>
+        <div class="message">
+          Yeah
+        </div>
+      </div>
+      <div class="chat-form">
+        <input type="text" class="chat-message" placeholder="Write your message here..">
+
+      </div>
     </div>
   </body>
   </html>
