--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <body class="indexbody">
     <div class="parent">
-    <div class="main">
+    <div class="main animate fadeIn">
       <h1 class="logo">Snappy</h1>
         <p class="tagline">
           An instant chat platform.
