--- a/chat.html
+++ b/chat.html
@@ -24,63 +24,8 @@
       <div class="chat-info">
           Rajesh
       </div>
-      <div class="messages">
-        <div class="message">
-          Hey Buddy
-        </div>
-        <div class="message sentmsg">
-          How are you?
-        </div>
-        <div class="message">
-          Cool
-        </div>
-        <div class="message sentmsg">
-          Wonderful
-        </div>
-        <div class="message">
-          Yeah
-        </div>
-
-
-        <div class="message">
-          Hey Buddy
-        </div>
-        <div class="message sentmsg">
-          How are you?
-        </div>
-        <div class="message">
-          Cool
-        </div>
-        <div class="message sentmsg">
-          Wonderful
-        </div>
-        <div class="message">
-          Yeah
-        </div>
-
-
-        <div class="message">
-          Hey Buddy Hey Buddy Hey Buddy Hey BuddyHey Buddy Hey Buddy Hey Buddy
-          Hey Buddy Hey Buddy Hey Buddy Hey BuddyHey Buddy Hey Buddy Hey Buddy
-          Hey Buddy Hey Buddy Hey Buddy Hey BuddyHey Buddy Hey Buddy Hey Buddy
-          Hey Buddy Hey Buddy Hey Buddy Hey BuddyHey Buddy Hey Buddy Hey Buddy
-        </div>
-        <div class="message sentmsg">
-          How are you? How are you? How are you? How are you? How are you?
-          How are you? How are you? How are you? How are you? How are you?
-          How are you? How are you? How are you? How are you? How are you?
-          How are you? How are you? How are you? How are you? How are you?
-
-        </div>
-        <div class="message">
-          Cool
-        </div>
-        <div class="message sentmsg">
-          Wonderful
-        </div>
-        <div class="message">
-          Yeah
-        </div>
+      <div class="messages" id="messages">
+        
       </div>
       <div class="chat-form">
         <input type="text" class="chat-message" placeholder="Write your message here..">
