--- a/chat.html
+++ b/chat.html
@@ -25,11 +25,12 @@
           Rajesh
       </div>
       <div class="messages" id="messages">
-        
+
       </div>
       <div class="chat-form">
-        <input type="text" class="chat-message" placeholder="Write your message here..">
-
+        <input type="hidden" id="chat-id"/>
+        <input id="message-text" type="text" class="chat-message" placeholder="Write your message here..">
+        <button id="send-button">Send</button>
       </div>
     </div>
 
